# ByteFlow-Main

./: .gitignore  README.md  pyproject.toml
src/: config.py  model.py  training.py  utils.py
src/tokenizer/: hybrid_tokenizer.py  pcap_tokenizer.py
